--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css">
     <title>Number Colors</title>
 </head>
+
 <body>
+    <div class="search-bar">
+        <input type="number" id="searchInput" placeholder="Enter a number" min="1" max="100">
+        <button id="searchButton">Search</button>
+    </div>
+
     <div id="container"></div>
     <script src="script.js"></script>
 </body>
+
 </html>
